[package]
name = "rubbish"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
readme = "README.md"
description = "Rubbish - Sort of like Chubby, but in Rust .. Rubbish."
license = "MPL-2.0"
keywords = ["consensus", "distributed", "lock"]
documentation = "https://github.com/djmitche/rubbish"
homepage = "https://github.com/djmitche/rubbish"
repository = "https://github.com/djmitche/rubbish"
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
bincode = "0.6.0"
rustc-serialize = "0.3.22"
error-chain = "0.11.0"
env_logger = "0.4.3"
log = "0.3.8"
byteorder = "1.3.4"
failure = "0.1.7"
serde_json = "1.0"
serde = { version = "1.0.105",  features = ["derive"] }
tokio = { version = "0.2.15", features = ["rt-core", "rt-threaded", "tcp", "macros", "sync", "io-util", "time", "stream"] }
net2 = "0.2.33"
async-trait = "0.1.27"
nix = "0.17.0"
rand = "0.7.3"
