[package]
name = "raft"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
failure = "0.1.7"
serde_json = "1.0"
serde = { version = "1.0.105",  features = ["derive"] }
tokio = { version = "0.2.13", features = ["rt-core", "tcp", "macros", "sync"] }
async-trait = "0.1.27"

[[bin]]
name = "kvserver"
path = "src/bin/kvserver.rs"

[[bin]]
name = "kvclient"
path = "src/bin/kvclient.rs"
