[package]
name = "raft"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
failure = "0.1.7"
serde_json = "1.0"
serde = { version = "1.0.105",  features = ["derive"] }
tokio = { version = "0.2.15", features = ["rt-core", "tcp", "macros", "sync", "io-util", "time", "stream"] }
net2 = "0.2.33"
async-trait = "0.1.27"
nix = "0.17.0"
rand = "0.7.3"

[[bin]]
name = "kvserver"
path = "src/bin/kvserver.rs"

[[bin]]
name = "kvclient"
path = "src/bin/kvclient.rs"
